acomodando el directorio

--- a/desarrollo/codo-codo/git/Clase3/index.html
+++ b/desarrollo/codo-codo/git/Clase3/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h1> texto mmmm pagina web </h1>
-<img src="./Clase3 - HTML_files/259-200x300.jpg">
+<img src="259-200x300.jpg">
 
 <a href="./Clase3 - HTML_files/259-200x300.jpg" target="_blank">Ver fotito</a><a>
 
