--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <a class="nav-link" href="javascript:void(0)"style="color: white;"> Terminos y condiciones</a>          
         </ul>
         <ul class="col ">          
-          <a class="nav-link" href="javascript:void(0)"style="color: white;"> Pribacidad</a>        
+          <a class="nav-link" href="javascript:void(0)"style="color: white;"> Privacidad</a>        
       </ul>
       <ul class="col ">          
         <a class="nav-link" href="javascript:void(0)"style="color: white;"> Estudiantes</a>      
